Add basic log in functionality

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/app.css"/>
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
-<body>
+<body ng-controller="MainCtrl">
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -39,7 +39,8 @@
         <ul class="nav navbar-nav">
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Sign in</a></li>
+          <li><a ng-hide="auth.user" href="#/login">Sign in</a></li>
+          <li><a ng-show="auth.user" ng-click="auth.$logout()" href="#">Log out</a></li>
         </ul>
       </div>
     </div>
@@ -47,10 +48,18 @@
 
   <div ng-view></div>
 
+  <div class="container">
+    <div id="footer">
+      <p>Created by Kevin Lin</p>
+      {{auth}}
+    </div>
+  </div>
+
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/firebase/firebase.js"></script>
+  <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angularfire/angularfire.js"></script>
