--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,11 @@
   <link rel="stylesheet" href="bower_components/animate.css/animate.css">
   <link rel="stylesheet" href="css/app.css"/>
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
+  <script src="bower_components/firebase/firebase.js"></script>
+  <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angularfire/angularfire.js"></script>
 </head>
 <body ng-controller="MainCtrl">
 
@@ -38,8 +43,9 @@
       <div class="collapse navbar-collapse" id="bs-navbar-collapse">
         <ul class="nav navbar-nav">
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right" ng-cloak>
           <li><a ng-hide="auth.user" href="#/login">Sign in</a></li>
+          <li><a ng-show="auth.user" href="#/commitmnts">{{auth.user.email}}</a></li>
           <li><a ng-show="auth.user" ng-click="auth.$logout()" href="#">Log out</a></li>
         </ul>
       </div>
@@ -51,18 +57,12 @@
   <div class="container">
     <div id="footer">
       <p>Created by Kevin Lin</p>
-      {{auth}}
     </div>
   </div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-  <script src="bower_components/firebase/firebase.js"></script>
-  <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/angularfire/angularfire.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
