--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,17 @@
         <ul class="nav navbar-nav">
         </ul>
         <ul class="nav navbar-nav navbar-right" ng-cloak>
-          <li><a ng-hide="auth.user" href="#/login">Sign in</a></li>
+          <form class="navbar-form" role="form" ng-submit="login()" ng-hide="auth.user">
+            <div class="form-group">
+              <label class="sr-only" for="inputEmail">Email address</label>
+              <input type="email" ng-model="username" class="form-control" id="inputEmail" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label class="sr-only" for="inputPassword">Password</label>
+              <input type="password" ng-model="password" class="form-control" id="inputPassword" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-default">Sign in</button>
+          </form>
           <li><a ng-show="auth.user" href="#/commitmnts">{{auth.user.email}}</a></li>
           <li><a ng-show="auth.user" ng-click="auth.$logout()" href="#">Log out</a></li>
         </ul>
