--- a/app/index.html
+++ b/app/index.html
@@ -49,14 +49,15 @@
               <label class="sr-only" for="inputEmail">Email address</label>
               <input type="email" ng-model="username" class="form-control" id="inputEmail" placeholder="Enter email">
             </div>
-            <div class="form-group">
+            <div class="form-group" ng-class="{'has-error has-feedback': loginError==true}">
               <label class="sr-only" for="inputPassword">Password</label>
               <input type="password" ng-model="password" class="form-control" id="inputPassword" placeholder="Password">
+              <span ng-show="loginError" class="glyphicon glyphicon-remove form-control-feedback"></span>
             </div>
             <button type="submit" class="btn btn-default">Sign in</button>
           </form>
           <li><a ng-show="auth.user" href="#/commitmnts">{{auth.user.email}}</a></li>
-          <li><a ng-show="auth.user" ng-click="auth.$logout()" href="#">Log out</a></li>
+          <li><a ng-show="auth.user" ng-click="auth.$logout()" href="#/home">Log out</a></li>
         </ul>
       </div>
     </div>
